# VectorShield

./: LICENSE  README.md  pyproject.toml
.github/workflows/: package-check.yml  python-publish.yml
docs/: api.md  architecture.md  configuration.md  integrations.md
